examples/test/testpolicy2312.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2312
  namespace: namespace453
spec:
  podSelector:
    matchLabels:
      key46: value14
      key47: value47
      key27: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value47
          key7: value12
          key41: value16
      podSelector:
        matchLabels:
          key23: value34
